--- a/index.html
+++ b/index.html
@@ -501,8 +501,8 @@
                         if (item.numeroprocessocommascara) {
                             html += `<p><span class="field-label">Número com Máscara:</span> ${item.numeroprocessocommascara}</p>`;
                         }
-                        if (item.dataDisponibilizacao) {
-                            html += `<p><span class="field-label">Data de Disponibilização:</span> ${formatDate(item.dataDisponibilizacao)}</p>`;
+                        if (item.datadisponibilizacao) {
+                            html += `<p><span class="field-label">Data de Disponibilização:</span> ${formatDate(item.datadisponibilizacao)}</p>`;
                         }
                         if (item.nomeOrgao) {
                             html += `<p><span class="field-label">Nome do Órgão:</span> ${item.nomeOrgao}</p>`;
