--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                             html += `<p><span class="field-label">Número com Máscara:</span> ${item.numeroprocessocommascara}</p>`;
                         }
                         if (item.datadisponibilizacao) {
-                            html += `<p><span class="field-label">Data de Disponibilização:</span> ${formatDate(item.datadisponibilizacao)}</p>`;
+                            html += `<p><span class="field-label">Data de Disponibilização:</span> ${item.datadisponibilizacao}</p>`;
                         }
                         if (item.nomeOrgao) {
                             html += `<p><span class="field-label">Nome do Órgão:</span> ${item.nomeOrgao}</p>`;
